force-app/main/default/objects/Contact_Count__c/Contact_Count__c.object-meta.xml
<CustomObject>
    <label>Contact Count</label>
    <nameField>
        <label>Contact Count</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Counts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>