force-app/main/default/objects/Contact_Count__c/validationRules/Maximum_Number_of_Contacts.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximum_Number_of_Contacts</fullName>
    <active>false</active>
    <errorConditionFormula>Number_of_Contacts__c &gt; 5</errorConditionFormula>
    <errorMessage>Contacts &gt; 5</errorMessage>
</ValidationRule>